Set languages in web ui
