# server/src/entity/configuration.ts
@@ -1,4 +1,7 @@
 export type Configuration = {
     id?: number;
     enableRegistration: boolean;
+    tmdbLang?: string;
+    audibleLang?: string;
+    serverLang?: string;
 };
